# netbox-plus

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.gitea/workflows/: build-harbor.yml
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  config.yml
.github/workflows/: claude-code-review.yml  close-incomplete-issues.yml  close-stale-issues.yml  lock-threads.yml  update-translation-strings.yml
docker/: .env.example  README.md  configuration_docker.py  entrypoint.sh
docs/: index.md
docs/administration/authentication/: enterprise-auth.md  overview.md
docs/configuration/: miscellaneous.md
docs/development/: getting-started.md  git-cheat-sheet.md  index.md  release-checklist.md  translations.md
docs/installation/: 3-netbox.md  6-ldap.md  docker.md  index.md  upgrading.md
docs/integrations/: prometheus-metrics.md
netbox/: release.yaml
netbox/core/: auth_services.py  auth_testing.py  auth_views.py  urls.py  views.py
netbox/core/forms/: enterprise_auth.py  model_forms.py
netbox/core/tests/: test_enterprise_auth.py
netbox/netbox/: configuration_example.py  middleware.py  settings.py  urls.py
netbox/netbox/api/: authentication.py
netbox/netbox/authentication/: __init__.py  enterprise_ldap.py
netbox/netbox/config/: __init__.py  enterprise_auth.py  parameters.py
netbox/netbox/navigation/: menu.py
netbox/netbox/tests/: test_enterprise_auth.py  test_views.py
netbox/project-static/: tsconfig.json
netbox/templates/: 500.html
(+6 files in other folders)
