# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[project]
name = "netbox plus"
version = "4.5.8"
requires-python = ">=3.12"
description = "The premier source of truth powering network automation."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Framework :: Django",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/swissmakers/netbox-plus"
Documentation = "https://netboxlabs.com/docs/netbox/"
Source = "https://github.com/swissmakers/netbox-plus"
Issues = "https://github.com/swissmakers/netbox-plus/issues"

[tool.black]
line-length = 120
target_version = ['py312', 'py313', 'py314']
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120

[tool.pyright]
include = ["netbox"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false
